Rainbow now starts from current hue
Also, move some color functions out into a module

TODO: smoothly transition to (h,1,0.5)

--- a/templates/page.html
+++ b/templates/page.html
@@ -60,7 +60,7 @@
               lock = false;
             }
           };
-          const url = "/api/looping";
+          const url = "/api/rainbow";
           const data = {
             enabled: true,
           };
